; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tools/tests/zero-to-n/extr_zero-to-n.c_join_churn_threads.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tools/tests/zero-to-n/extr_zero-to-n.c_join_churn_threads.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_churn_stopped_at = common dso_local global i32 0, align 4
@memory_order_seq_cst = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [65 x i8] c"Warning: Some of the churn threads may have stopped early: %lld\0A\00", align 1
@g_churn_stop = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@g_churn_count = common dso_local global i64 0, align 8
@g_churn_threads = common dso_local global i32* null, align 8
@EX_OSERR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"pthread_join %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @join_churn_threads to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @join_churn_threads() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @memory_order_seq_cst, align 4
  %4 = call i64 @atomic_load_explicit(i32* @g_churn_stopped_at, i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @g_churn_stopped_at, align 4
  %8 = call i32 @printf(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str, i64 0, i64 0), i32 %7)
  br label %9

9:                                                ; preds = %6, %0
  %10 = load i32, i32* @TRUE, align 4
  %11 = load i32, i32* @memory_order_seq_cst, align 4
  %12 = call i32 @atomic_store_explicit(i32* @g_churn_stop, i32 %10, i32 %11)
  store i64 0, i64* %1, align 8
  br label %13

13:                                               ; preds = %31, %9
  %14 = load i64, i64* %1, align 8
  %15 = load i64, i64* @g_churn_count, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %17, label %34

17:                                               ; preds = %13
  %18 = load i32*, i32** @g_churn_threads, align 8
  %19 = load i64, i64* %1, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @pthread_join(i32 %21, i32* null)
  store i64 %22, i64* %2, align 8
  %23 = load i64, i64* %2, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %17
  %26 = load i32, i32* @EX_OSERR, align 4
  %27 = load i64, i64* %2, align 8
  %28 = load i64, i64* %1, align 8
  %29 = call i32 @errc(i32 %26, i64 %27, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i64 %28)
  br label %30

30:                                               ; preds = %25, %17
  br label %31

31:                                               ; preds = %30
  %32 = load i64, i64* %1, align 8
  %33 = add i64 %32, 1
  store i64 %33, i64* %1, align 8
  br label %13

34:                                               ; preds = %13
  ret void
}

declare dso_local i64 @atomic_load_explicit(i32*, i32) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @atomic_store_explicit(i32*, i32, i32) #1

declare dso_local i64 @pthread_join(i32, i32*) #1

declare dso_local i32 @errc(i32, i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
